--- a/VanPhongCongChung/VanPhongCongChung/Views/Login/Index.cshtml
+++ b/VanPhongCongChung/VanPhongCongChung/Views/Login/Index.cshtml
@@ -49,6 +49,7 @@
                                     @Html.TextBoxFor(model =>
                                      model.UserName, new
                                      {
+                                         @required = true,
                                          @class = "form-control",
                                          @placeholder = "UserName",
                                          @name = "UserName",
@@ -59,6 +60,7 @@
                                     @Html.TextBoxFor(model =>
                                      model.Passwords, new
                                      {
+                                         @required = true,
                                          @class = "form-control",
                                          @placeholder =
                                      "Password",
